client/components/side_menu/style/index.less
@import "../../../style/index.less";

@menu_font_color: #d7dadd;
@menu_font_hover_color: #fff;

.halo-com-menu {
  display: flex;
  position: relative;
  flex: 1;
  overflow: -moz-hidden-unscrollable;
  .fixed-width(296px);
  > .top-menu {
    float: left;
    width: 96px;
    min-width: 96px;
    background-size: 96px auto;
    background-color: #0d1b2e;
    overflow-x: hidden;
    overflow-y: scroll;
    &::-webkit-scrollbar {
      display: none;
    }
    > .scroll-left-pane {
      position:absolute;
      width:8px;
      right:200px;
      top:0;
      bottom:0;
      opacity: 0;
      transition: .2s;
      border-radius: 5px;
      z-index: 100;
      > .scroll-left-slider {
        background: rgba(255,255,255,.5);
        position: relative;
        margin : 0 1px;
        border-radius: 3px;
        cursor: default;
      }
    }
    &:hover > .scroll-left-pane,
    .scroll-left-pane.active {
      opacity: 1;
    }
    > li {
      position: relative;
      width: 96px;
      height: 56px;
      text-align: center;
      color: @menu_font_color;
      cursor: pointer;
      padding: 12px 0;
      > i {
        display: block;
        width: 32px;
        height: 32px;
        line-height: 32px;
        text-align: center;
        margin: 0 auto;
        border-radius: 2px;
        font-size: 32px;
      }
      > span {
        line-height: 24px;
        text-align: center;
      }
      &::after{
        display: block;
        width: 74px;
        height: 9px;
        margin: 2px auto 0px;
        line-height: 8px;
        content: '';
        border-bottom: 1px solid #303f51;
      }
      &:hover,
      &.selected {
        background-color: rgba(41,159,203,0.3);
        > i {
          color: @menu_font_hover_color;
        }
        span {
          color: @menu_font_hover_color;
        }
        &::before{
          position: absolute;
          top: 0;
          left: 0;
          width: 4px;
          height: 80px;
          content: '';
          background-color: #2d84a6;
        }
      }
    }
  }
  > .menu {
    float: left;
    width: 215px;
    min-width: 215px;
    border-right: none;
    overflow: scroll;
    overflow-x: hidden;
    background-color: transparent;
    > li {
      li.selected {
        position: relative;
        z-index: 9;
        overflow: visible;
        width: 181px;
      }
    }
  }
}

.halo-com-menu {
  > .menu {
    &::-webkit-scrollbar {
      display: none;
    }
  }
  > .scroll-pane {
    position:absolute;
    width:8px;
    right:0;
    top:0;
    bottom:0;
    opacity: 0;
    transition: .2s;
    border-radius: 5px;
    z-index: 100;
    > .scroll-slider {
      background: rgba(0,0,0,.3);
      position: relative;
      margin : 0 1px;
      border-radius: 3px;
      cursor: default;
    }
  }

  &:hover > .scroll-pane,
  .scroll-pane.active {
    opacity: 1;
  }
}

